# purple-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: live_test_investigation.py
src/purple_mcp/: cli.py  server.py
src/purple_mcp/libs/investigation/: __init__.py  collector.py  config.py  exceptions.py  models.py
src/purple_mcp/tools/: investigation.py  storyline.py
tests/unit/: test_cli.py  test_server.py
tests/unit/tools/: test_investigation.py  test_storyline.py
